

<resources>
        <string name="app_name">Usa Note</string>
        <string name="titulo_login">Login</string>
        <string name="titulo_registro">Registro</string>
        <string name="password">Contraseña</string>
        <string name="email">Email</string>
        <string name="login">Ingresar</string>
        <string name="registro">Registrarme</string>
        <string name="nombre">Nombre</string>
        <string name="apellido">Apellido</string>
        <string name="telefono">Teléfono</string>
        <string name="recovery_password">Olvide mi contraseña</string>
        <string name="segundo_text_registro">¿Aún no estas registrado? Hace click aquí</string>
        <string name="title_check_email">Verificación de Email</string>
        <string name="subtitle_check_email">Para completar su registro verifique su correo.</string>
        <string name="continue_check_email">Continuar</string>
        <string name="title_account_recovery">Recuperación de la cuenta</string>
        <string name="subtitle_account_recovery">Ingrese su email para recibir un correo con los pasos a seguir para cambiar su contraseña.</string>
        <string name="recovery_account">Enviar</string>
        <string name="title_update_password">Cambio de contraseña</string>
        <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
        <string name="title_delete_account">Eliminar cuenta</string>
        <string name="title_cart">Carrito</string>
        <string name="cart_subtotal_label">Subtotal</string>
        <string name="dollar_sign">$</string>
        <string name="go_to_checkout">Checkout</string>
        <string name="empty_cart">El carrito está vacío! Añade tus productos!</string>
        <string name="not_logged_in">Debe estar logueado para continuar!</string>
        <string name="no_stock">No hay más stock!</string>
        <string name="mis_compras_title">Órdenes realizadas</string>
        <string name="mis_compras_detalle_orden_title">Detalle de la orden</string>
        <string name="search_placeholder">Buscar productos</string>
        <string name="contacto_titulo">Contacto</string>
        <string name="btn_contacto">Enviar email</string>
        <string name="estadisticas">Estadísticas</string>
        <string name="campos_invalidos">Campos invalidos. Verifique sus datos</string>
        <string name="ingreso_exitoso">Ingreso Exitoso</string>
        <string name="ingreso_no_exitoso">El ingreso no fue exitoso. Verifique sus datos</string>
        <string name="no_se_selecciono_metodo_envio">No se ha seleccionado un metodo de envio. Porfavor elija uno.</string>
        <string name="debe_agregar_domicilio">Debe agregar un domicilio para continuar.</string>
        <string name="btn_perfil_go_to_mis_compras">Ir a mis compras</string>
        <string name="mis_compras_sin_ordenes">Todavía no realizó ninguna compra!</string>
        <string name="direccion_missing">Debe crear una nueva dirección!</string>
        <string name="celularTexto">+549-11-2345-6798</string>
        <string name="whatsappBtn">Enviar Whatsapp</string>
        <string name="detalleContacto">Estos son nuestros datos para que puedas contactarte:</string>
        <string name="domicilios_missing">Este usuario aun no tiene domicilios guardados</string>
</resources>